Added ComingSoon image

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Hello World</h2>
+<h2>楽旅(仮)</h2>
 <p>
-The time is now: <%= Time.now %>
+<img src="https://host.cals.wisc.edu/genetics/wp-content/uploads/sites/23/2014/05/comingsoon_stamp.png" />
 </p>
