--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -5,7 +5,9 @@
     <div><%= image_tag('logo.png', :alt => 'RakuTabi') %></div>
   </div>
 
+<%= form_tag('/search', :method => :post) do %>
   <div class="button">
-    <div><%= image_tag('button.png', :alt => 'Search') %></div>
+    <div><%= image_submit_tag('button.png', :alt => 'Search') %></div>
   </div>
+<% end %>
 </div>
