--- a/app/views/tour/tour.html.erb
+++ b/app/views/tour/tour.html.erb
@@ -1,7 +1,7 @@
 
 <% if ! @jsonData.nil? %>
   <div class="wrapper">
-
+  <%= image_tag "logo_red.png" %>
     <h2>検索結果</h2>
     
     <% @jsonData['results']['tour'].each do |item| %>
