--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -6,8 +6,8 @@
   </div>
 
   <div class="button">
-  <%= link_to image_tag('town.png' :alt => 'Town'), '/tour?imgid=town' %>
-  <%= link_to image_tag('sea.png' :alt => 'Sea'), '/tour?imgid=sea' %>
+  <%= link_to image_tag('town.png', :alt => 'Town'), '/tour?imgid=town' %>
+  <%= link_to image_tag('sea.png', :alt => 'Sea'), '/tour?imgid=sea' %>
   </div>
 <% end %>
 </div>
