--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -4,7 +4,7 @@
   </div>
   
   <div class="pic">
-    <%= link_to image_tag(@image_l.path), '/tour?imgid=' + @image_l.image_id, {:id => "left", :onclick => "show();"} %>
+    <%= link_to image_tag(@image_l.path, :size => "352x352"), '/tour?imgid=' + @image_l.image_id, {:id => "left", :onclick => "show();"} %>
 
     <div id="target" class="hidden">
       <div id="loading">
@@ -19,6 +19,6 @@
       </div>
     </div>
     
-    <%= link_to image_tag(@image_r.path), '/tour?imgid=' + @image_r.image_id, {:id => "right", :onclick => "show();"} %>
+    <%= link_to image_tag(@image_r.path, :size => "352x352"), '/tour?imgid=' + @image_r.image_id, {:id => "right", :onclick => "show();"} %>
   </div>
 </div>
