--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -1,3 +1,21 @@
+<script>
+var count = 0;
+function rotate() {
+  var elem = document.getElementById('loading');
+  elem.style.MozTransform = 'scale(0.5) rotate('+count+'deg)';
+  elem.style.WebkitTransform = 'scale(0.5) rotate('+count+'deg)';
+  if (count==360) { count = 0 }
+  count+=45;
+  window.setTimeout(rotate, 100);
+}
+window.setTimeout(rotate, 100);
+
+function show() {
+  var elem = document.getElementById('target');
+  elem.className = "visible"
+}
+</script>
+
 <div class="wrapper">
   <div class="title">
     <div><%= image_tag('which.png', :alt => 'Which do you lile?') %></div>
