--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -1,9 +1,34 @@
+<%= content_for(:header_for_google) do %>
+<style type="text/css">
+  html { height: 100% }
+  body { height: 100%; margin: 0; padding: 0 }
+  #map_canvas { height: 100% }
+</style>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDkBcznQGD0BgXmIiXNwl7PDCmOnl5K8tc&sensor=false">
+</script>
+<script type="text/javascript">
+  function initialize() {
+    var mapOptions = {
+      center: new google.maps.LatLng(15.000, 135.000),
+      zoom: 1,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+<% end %>
 
 <% if ! @jsonData.nil? %>
   <div class="wrapper">
 
     <h2>検索結果</h2>
     
+    <div style="border: 1px solid black; height: 200px; margin: -50px 40px 50px;">
+      <div id="map_canvas" style="width:100%; height:100%"></div>
+    </div>
+
     <% @jsonData['results']['tour'].each do |item| %>
       <% if ! item['img'].empty? %>
 
