Change GoogleAPI Key to Env-Variable

--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -4,7 +4,7 @@
   body { height: 100%; margin: 0; padding: 0 }
   #map_canvas { height: 100% }
 </style>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDkBcznQGD0BgXmIiXNwl7PDCmOnl5K8tc&sensor=false">
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_APPID"] %>&sensor=false">
 </script>
 <script type="text/javascript">
   function initialize() {
