--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -14,6 +14,20 @@
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
     var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+
+    <% @counter = 0 %>
+    <% @jsonData['results']['tour'].each do |item| %>
+      <% @counter += 1 %>
+      <% if ! item['img'].empty? %>
+        <% @lat = item['dest']['lat'] %>
+        <% @lng = item['dest']['lng'] %>
+        <% @name = item['dest']['name'] %>
+    var myLatLng = new google.maps.LatLng(<%= @lat %>,<%= @lng %>);
+    var marker = new google.maps.Marker({
+      position: myLatLng, map: map, title: '<%= @name %>', animation: google.maps.Animation.DROP
+    });
+      <% end %>
+    <% end %>
   }
 
   google.maps.event.addDomListener(window, 'load', initialize);
