Correct spelling issue#39

--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -18,7 +18,7 @@ function show() {
 
 <div class="wrapper">
   <div class="title">
-    <div><%= image_tag('which.png', :alt => 'Which do you lile?') %></div>
+    <div><%= image_tag('which.png', :alt => 'Which do you like?') %></div>
   </div>
   
   <div class="pic">
