--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -81,6 +81,6 @@ $(window).load(function() {
   <ul></div> </div>
 <% end %>
 
-<div style="border: 1px solid black; height: 200px; margin: -50px 40px 50px;">
+<div style="height: 200px; width: 966px; margin: -54px auto 100px auto;">
   <div id="map_canvas" style="width:100%; height:100%"></div>
 </div>
