--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -65,7 +65,7 @@ $(window).load(function() {
         <li>
           <div class="tour">
             <div class="pic">
-              <%= image_tag(@img_url, :alt => @caption) %>
+              <%= link_to image_tag(@img_url, :alt => @caption), {:controller => 'tour_controller', :action => 'detail'} %>
             </div>
             <div class="text">
               <h2><%= @city %></h2>
@@ -75,7 +75,7 @@ $(window).load(function() {
             </div>
           </div>
         </li>
-        
+
       <% end %>
     <% end %>
 
