--- a/app/views/tour/detail.html.erb
+++ b/app/views/tour/detail.html.erb
@@ -1,5 +1,4 @@
-<% if ! @jsonData.nil? %>
-  <div class="wrapper">
+<div class="wrapper">
    <h2>ツアー詳細画面</h2>
-   </div>
-<% end %>
+   <h2><%= @tourid %></h2>
+</div>
