--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -65,7 +65,7 @@ $(window).load(function() {
         <li>
           <div class="tour">
             <div class="pic">
-            <%= link_to image_tag(@img_url, :alt => @caption), '/detail', {data: {no_turbolink: true}} %>
+            <%= link_to image_tag(@img_url, :alt => @caption), "/detail?tourid=" + item［"id"］, {data: {no_turbolink: true}} %>
             </div>
             <div class="text">
               <h2><%= @city %></h2>
