--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -18,6 +18,7 @@ $(window).load(function() {
 </script>
 <script type="text/javascript">
   function initialize() {
+    var styles = [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}];
     var mapOptions = {
       center: new google.maps.LatLng(15.000, 155.000),
       zoom: 2,
@@ -27,10 +28,15 @@ $(window).load(function() {
         position: google.maps.ControlPosition.TOP_RIGHT
       },
       mapTypeId: google.maps.MapTypeId.ROADMAP,
-      styles: [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}]
+      styles: styles
     };
     var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-
+    
+    var icon = new google.maps.MarkerImage('assets/pin_a.png',
+      new google.maps.Size(50,79),
+      new google.maps.Point(0,0),
+      new google.maps.Point(25,79)
+    );
     <% @counter = 0 %>
     <% @tours.each do |item| %>
       <% @counter += 1 %>
@@ -41,7 +47,7 @@ $(window).load(function() {
     setTimeout(function() {
       var myLatLng = new google.maps.LatLng(<%= @lat %>,<%= @lng %>);
       var marker = new google.maps.Marker({
-        position: myLatLng, map: map, title: '<%= @name %>', animation: google.maps.Animation.DROP
+        position: myLatLng, map: map, icon: icon, title: '<%= @name %>', animation: google.maps.Animation.DROP
       });
     }, <%= @counter %> * 500);
       <% end %>
@@ -53,7 +59,7 @@ $(window).load(function() {
 <% end %>
 
 <% if ! @tours.nil? %>
-  <div class="wrapper" style="margin-top: -80px;"><div class="flexslider"><ul class="slides">
+  <div class="wrapper"><div class="flexslider"><ul class="slides">
 
     <% @tours.each do |item| %>
       <% if ! item['img'].empty? %>
@@ -89,6 +95,6 @@ $(window).load(function() {
   <ul></div> </div>
 <% end %>
 
-<div style="height: 320px; width: 966px; margin: -55px auto 100px auto;">
+<div style="height: 360px; width: 966px; margin: -54px auto 100px auto;">
   <div id="map_canvas" style="width:100%; height:100%"></div>
 </div>
