--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -1,34 +1,45 @@
-.bg {
-  min-height: 100%;
-  min-width: 1024px;
-  height: auto;
+#top {
+  min-width: 800px;
+  height: 800px;
   width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-@media screen and (max-width: 1024px) {
-  .bg {
-    left: 50%;
-    margin-left: -512px;
-  }
-}
-
-#container {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.logo, .button {
+  background-image: url("bg.jpg");
+  background-size: cover;
   display: table;
-  text-align: center;
-  width: 100%;
 }
-.logo { height: 70%; }
-.button { height: 30%; }
-
-.logo > *, .button > * {
+#top .inner {
   display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 }
-.logo > * { vertical-align: middle; }
+#top .logo {
+  margin-bottom: 130px;
+}
+
+#bottom {
+  text-align: center;
+}
+#bottom .feature {
+  min-height: 400px;
+  letter-spacing: 0.1em;
+}
+#bottom .title {
+  margin: 150px 0 50px 0;
+  font-size: 36px;
+}
+#bottom .text {
+  margin: 0 0 100px 0;
+  font-size: 16px;
+}
+#bottom .image {
+  margin: 0 300px;
+  padding: 100px 0;
+  text-align: center;
+  background-color: #efefef;
+}
+
+#footer {
+  padding: 150px 0 20px 0;
+  text-align: center;
+  font-size: 13px;
+  color: #999;
+}
