--- a/app/views/tour/detail.html.erb
+++ b/app/views/tour/detail.html.erb
@@ -1,4 +1,4 @@
 <div class="wrapper">
    <h2>ツアー詳細画面</h2>
-   <h2><%= @tourid %></h2>
+   <h2><%= @tourDetail['results']['tour'][0]['term'] %></h2>
 </div>
