--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -6,35 +6,65 @@
   background-size: cover;
   display: table;
 }
+#top .top_top, #top .top_bottom {
+  display: table-row;
+  text-align: center;
+}
 #top .inner {
   display: table-cell;
-  text-align: center;
   vertical-align: middle;
+}
+#top .top_top {
+  height: 95%;
+}
+#top .top_bottom {
+  height: 5%;
 }
 #top .logo {
   margin-bottom: 130px;
 }
+#top a {
+  color: #fff;
+  text-decoration: none;
+}
+#top a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
 
 #bottom {
-  text-align: center;
+  margin: 0 auto;
+  display: table;
 }
 #bottom .feature {
-  min-height: 400px;
-  letter-spacing: 0.1em;
+  display: table-row;
+  text-align: left;
+}
+#bottom .bottom_text, #bottom .bottom_image {
+  padding-top: 150px;
+  display: table-cell;
+  vertical-align: top;
+}
+#bottom .bottom_text {
+  width: 400px;
 }
 #bottom .title {
-  margin: 150px 0 50px 0;
-  font-size: 36px;
+  margin: 0 0 20px 0;
+  font-size: 32px;
 }
 #bottom .text {
   margin: 0 0 100px 0;
-  font-size: 16px;
+  font-size: 15px;
+  line-height: 200%;
 }
 #bottom .image {
-  margin: 0 300px;
-  padding: 100px 0;
-  text-align: center;
-  background-color: #efefef;
+  margin: 0 auto;
+  width: 300px;
+  height: 300px;
+}
+#bottom .image img {
+  width: 300px;
+  height: 300px;
 }
 
 #footer {
