--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -3,7 +3,10 @@ $(window).load(function() {
   $('.flexslider').flexslider({
     animation: "slide",
     animationLoop: true,
-    controlNav: false
+    controlNav: false,
+    after : function(slider){
+      setActive(slider.currentSlide);
+    },
   });
 });
 </script>
@@ -18,6 +21,8 @@ $(window).load(function() {
 </script>
 <script type="text/javascript">
   var markerList;
+  var iconActive;
+  var iconInactive;
   function initialize() {
     markerList = new google.maps.MVCArray();
     var styles = [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}];
@@ -34,12 +39,12 @@ $(window).load(function() {
     };
     var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
     
-    var iconActive = new google.maps.MarkerImage('assets/pin_a.png',
+    iconActive = new google.maps.MarkerImage('assets/pin_a.png',
       new google.maps.Size(50,79),
       new google.maps.Point(0,0),
       new google.maps.Point(14,46)
     );
-    var iconInactive = new google.maps.MarkerImage('assets/pin_ia.png',
+    iconInactive = new google.maps.MarkerImage('assets/pin_ia.png',
       new google.maps.Size(50,79),
       new google.maps.Point(0,0),
       new google.maps.Point(14,46)
@@ -68,6 +73,13 @@ $(window).load(function() {
     }, <%= @counter %> * 180);
       <% end %>
     <% end %>
+  }
+
+  function setActive(current) {
+    markerList.forEach(function(marker){
+      marker.setIcon(iconInactive);
+      if (marker.getZIndex() == current) marker.setIcon(iconActive);
+    });
   }
 
   google.maps.event.addDomListener(window, 'load', initialize);
