Modify explanation issue#33

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -27,7 +27,11 @@ $(function(){
   <div class="feature">
     <div class="bottom_text">
       <p class="title">RakuTabiとは</p>
-      <p class="text">RakuTabiは、他のサービスとはちょっと違う、今までにない旅行ツアーレコメンドサービスです。</p>
+      <p class="text">
+        RakuTabiは、他のサービスとはちょっと違う、今までにない旅行ツアーレコメンドサービスです。<br />
+        「休みがとれた。どこ行こう」<br />
+        行き先が決まっていない旅の検索に最適です。
+      </p>
     </div>
     <div class="bottom_image">
       <p class="image"><%= image_tag("feature01.png") %></p>
@@ -40,14 +44,21 @@ $(function(){
     </div>
     <div class="bottom_text">
       <p class="title">シンプルな検索</p>
-      <p class="text">行き先が決まっていなくても大丈夫。やらなきゃいけないことは、シンプルな条件を入力するだけです。</p>
+      <p class="text">
+        旅行ツアーをレコメンドしてもらうためにやらなきゃいけないことは、シンプルな質問に答えるだけ。<br />
+        細かいことを考えたり、たくさんの条件を入力する必要はありません。
+      </p>
     </div>
   </div>
 
   <div class="feature">
     <div class="bottom_text">
       <p class="title">思いつかないような場所へ</p>
-      <p class="text">その時の気分にあった、自分では思いつかないような旅行ツアーをレコメンドしてくれます。</p>
+      <p class="text">
+        たったそれだけで、その時の気分にあった、自分では思いつかないような旅行ツアーをレコメンドしてくれます。<br />
+        世界はひろい。<br />
+        RakuTabiで新しい発見をしてください。
+      </p>
     </div>
     <div class="bottom_image">
       <p class="image"><%= image_tag("feature03.png") %></p>
