--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -15,8 +15,8 @@ $(function(){
       <div class="logo"><%= image_tag('logo.png', :alt => 'RakuTabi') %></div>
 
       <div id="button_top">
-        <div class="button_left"><%= link_to image_tag('button_top_left.png', :alt => '今の気分で選ぶ'), '/selection' %></div>
-        <div class="button_right"><%= link_to image_tag('button_top_right.png', :alt => '予算と日程で選ぶ'), '#' %></div>
+        <div class="button_left"><a href="/selection" alt="今の気分で選ぶ">今の気分で選ぶ</a></div>
+        <div class="button_right"><a href="#" alt="予算と日程で選ぶ">予算と日程で選ぶ</a></div>
       </div>
     </div>
   </div>
@@ -70,9 +70,9 @@ $(function(){
   </div>
 </div>
 
-<div id="button_buttom">
-  <div class="button_left"><%= link_to image_tag('button_bottom_left.png', :alt => '今の気分で選ぶ'), '/selection' %></div>
-  <div class="button_right"><%= link_to image_tag('button_bottom_right.png', :alt => '予算と日程で選ぶ'), '#' %></div>
+<div id="button_bottom">
+  <div class="button_left"><a href="/selection" alt="今の気分で選ぶ">今の気分で選ぶ</a></div>
+  <div class="button_right"><a href="#" alt="予算と日程で選ぶ">予算と日程で選ぶ</a></div>
 </div>
 
 <div id="footer">
