Add get_tours_by_priceterm function

--- a/app/views/tour/detail.html.erb
+++ b/app/views/tour/detail.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <!-- データを変数に格納 -->
-  <% tour = @tourDetail['results']['tour'][0] %>
+  <% tour = @tourDetail %>
 
     <!-- HTMLで出力 -->
   <% if ! tour.nil? %>
