--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -12,17 +12,16 @@ $(function(){
 <div id="top">
   <div class="top_top">
     <div class="inner">
+      <div class="icon_index">
+        <div class="icon_about"><a id="jump" href="#bottom">&nbsp;RakuTabiについて</a></div>
+      </div>   
+      
       <div class="logo"><%= image_tag('logo.png', :alt => 'RakuTabi') %></div>
 
       <div id="button_top">
         <div class="button_left"><a href="/selection" alt="今の気分で選ぶ">今の気分で選ぶ</a></div>
         <div class="button_right"><a href="#" alt="予算と日程で選ぶ">予算と日程で選ぶ</a></div>
       </div>
-    </div>
-  </div>
-  <div class="top_bottom">
-    <div class="innner">
-      <div><a id="jump" href="#bottom">詳細をみる ∨</a></div>
     </div>
   </div>
 </div>
