--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -19,6 +19,10 @@ function show() {
 <div class="wrapper">
   <div class="title">
     <div><%= image_tag('title_feeling.png', :alt => '今の気分を選んでください。') %></div>
+
+    <div class="icon_select">
+      <div class="icon_refresh"><a href="javascript:location.reload(true);">&nbsp;別のイメージ画像を表示</a></div>
+    </div>     
   </div>
   
   <div class="pic">
