--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -19,8 +19,7 @@ $(function(){
       <div class="logo"><%= image_tag('logo.png', :alt => 'RakuTabi') %></div>
 
       <div id="button_top">
-        <div class="button_left"><a href="/selection" alt="今の気分で選ぶ">今の気分で選ぶ</a></div>
-        <div class="button_right"><a href="#" alt="予算と日程で選ぶ">予算と日程で選ぶ</a></div>
+        <a href="/selection" alt="今すぐはじめる">今すぐはじめる</a>
       </div>
     </div>
   </div>
@@ -70,8 +69,7 @@ $(function(){
 </div>
 
 <div id="button_bottom">
-  <div class="button_left"><a href="/selection" alt="今の気分で選ぶ">今の気分で選ぶ</a></div>
-  <div class="button_right"><a href="#" alt="予算と日程で選ぶ">予算と日程で選ぶ</a></div>
+  <a href="/selection" alt="今すぐはじめる">今すぐはじめる</a>
 </div>
 
 <div id="footer">
