--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -18,7 +18,7 @@ function show() {
 
 <div class="wrapper">
   <div class="title">
-    <div><%= image_tag('title_feeling.png', :alt => '今の気分を選んでください。') %></div>
+    <div><%= image_tag('title_select.png', :alt => '今の気分を選んでください。') %></div>
 
     <div class="icon_select">
       <div class="icon_refresh"><a href="javascript:location.reload(true);">&nbsp;別のイメージ画像を表示</a></div>
